--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,7 @@
-name: journey_plotter
+name: journey_plotter2
 dependencies:
-    - python==3.5.2
-    - geopandas==0.4.0
+    - python==3.11
+    - geopandas==0.8.2
     - gpxpy==1.3.4
     - shapely==1.6.4
     - pip==20.2.2
